Added code for pbx core